the images in the image folder

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                   <li><a href="" class="all">ALL</a></li>
                   <li><a href="" class="image">IMAGES</a></li>
                   <li>
-                      <img src="./notifications-bell-button.png" alt=""
+                      <img src="images/notifications-bell-button.png" alt=""
                       class="noti"   /><span class="noti-text">3</span>
                   </li>
                   <li><a href="#">Gmail</a></li>
@@ -29,24 +29,25 @@
                       </svg>
                   </li>
 
-                  <li><img src="./janet.png" alt="" class="janet" /></li>
+                  <li><img src="images/janet.png" alt="" class="janet" /></li>
                   </ul>
           </nav>
 
           <div class="main">
-              <img src="./googlelogo_color_272x92dp.png" alt="" class="googleLogo"/>
+
+              <img src="images/googlelogo_color_272x92dp.png" alt="" class="googleLogo"/>
 
               <div class="searchBox">
                   <input type="text" placeholder="" class="search"/>
 
                   <div class="icons">
                       <div>
-                          <img src="./search-regular-24.png" alt="" class="search-icon" />
+                          <img src="images/search-regular-24.png" alt="" class="search-icon" />
                       </div>
 
                       <div class="miclens">
-                          <img src="./Google_microphone_logo.png" alt="" class="microphone" />
-                          <img src="./Google_Lens_Icon.svg.png" alt="" srcset="" class="lens" />
+                          <img src="images/Google_microphone_logo.png" alt="" class="microphone" />
+                          <img src="images/Google_Lens_Icon.svg.png" alt="" srcset="" class="lens" />
                       </div>    
                   </div>
               </div> 
@@ -96,150 +97,150 @@
        <div class="container-app">
           <div class="google-app child1">
             <div class="google-textImg">
-              <img src="./janet.png" alt="" class="janet1" />
+              <img src="images/janet.png" alt="" class="janet1" />
               <p>Accounts</p>
             </div>
             <div class="google-textImg">
-              <img src="./google-search.png" alt="" class="app-icon" />
+              <img src="images/google-search.png" alt="" class="app-icon" />
               <p>Search</p>
             </div>
             <div class="google-textImg">
-              <img src="./google-maps.png" alt="" class="app-icon" />
+              <img src="images/google-maps.png" alt="" class="app-icon" />
               <p>Maps</p>
             </div>
             <div class="google-textImg">
-              <img src="./youtube.png" alt="" class="app-icon" />
+              <img src="images/youtube.png" alt="" class="app-icon" />
               <p>Youtube</p>
             </div>
             <div class="google-textImg">
-              <img src="./playstore.png" alt="" class="app-icon" />
+              <img src="images/playstore.png" alt="" class="app-icon" />
               <p>Play</p>
             </div>
             <div class="google-textImg">
-              <img src="./google (1).png" alt="" class="app-icon" />
+              <img src="images/google (1).png" alt="" class="app-icon" />
                 <p>News</p>
             </div>
             <div class="google-textImg">
-              <img src="./gmail.png" alt="" class="app-icon" />
+              <img src="images/gmail.png" alt="" class="app-icon" />
               <p>Gmail</p>
             </div>
             <div class="google-textImg">
-              <img src="./meet.png" alt="" class="app-icon" />
+              <img src="images/meet.png" alt="" class="app-icon" />
               <p>Meet</p>
             </div>
             <div class="google-textImg">
-              <img src="./Google_Chat_icon.png" alt="" class="app-icon" />
+              <img src="images/Google_Chat_icon.png" alt="" class="app-icon" />
               <p>Chat</p>
             </div>
             <div class="google-textImg">
-              <img src="./Google_Contacts_icon_.png" alt="" class="app-icon" />
+              <img src="images/Google_Contacts_icon_.png" alt="" class="app-icon" />
               <p>Contacts</p>
             </div>
             <div class="google-textImg">
-              <img src="./google-drive.png" alt="" class="app-icon" />
+              <img src="images/google-drive.png" alt="" class="app-icon" />
               <p>Drive</p>
             </div>
             <div class="google-textImg">
-              <img src="./google-calendar.png" alt="" class="app-icon" />
+              <img src="images/google-calendar.png" alt="" class="app-icon" />
               <p>Calendar</p>
             </div>
             <div class="google-textImg">
-              <img src="./google (2).png" alt="" class="app-icon" />
+              <img src="images/google (2).png" alt="" class="app-icon" />
               <p>Translate</p>
             </div>
             <div class="google-textImg">
-              <img src="./google-photos.png" alt="" class="app-icon" />
+              <img src="images/google-photos.png" alt="" class="app-icon" />
               <p>Photos</p>
             </div>
             <div class="google-textImg">
-              <img src="./google (3).png" alt="" class="app-icon" />
+              <img src="images/google (3).png" alt="" class="app-icon" />
               <p>Business....</p>
             </div>
             <div class="google-textImg">
-              <img src="./ad-center.png" alt="" class="app-icon" />
+              <img src="images/ad-center.png" alt="" class="app-icon" />
               <p>My Ad center</p>
             </div>
             <div class="google-textImg">
-              <img src="./shopping.png" alt="" class="app-icon" />
+              <img src="images/shopping.png" alt="" class="app-icon" />
               <p>Shopping</p>
             </div>
           </div>
 
           <div class="google-app child2">
             <div class="google-textImg">
-              <img src="./bar-chart.png" alt="" class="app-icon" />
+              <img src="images/bar-chart.png" alt="" class="app-icon" />
               <p>Finance</p>
             </div>
             <div class="google-textImg">
-              <img src="./google-docs.png" alt="" class="app-icon" />
+              <img src="images/google-docs.png" alt="" class="app-icon" />
               <p>Docs</p>
             </div>
             <div class="google-textImg">
-              <img src="./google-sheets.png" alt="" class="app-icon" />
+              <img src="images/google-sheets.png" alt="" class="app-icon" />
               <p>Sheets</p>
             </div>
             <div class="google-textImg">
-              <img src="./slides.png" alt="" class="app-icon" />
+              <img src="images/slides.png" alt="" class="app-icon" />
               <p>Slides</p>
             </div>
             <div class="google-textImg">
-              <img src="./google-books.png" alt="" class="app-icon" />
+              <img src="images/google-books.png" alt="" class="app-icon" />
               <p>Books</p>
             </div>
             <div class="google-textImg">
-              <img src="./Blogger_icon.svg.png" alt="" class="app-icon" />
+              <img src="images/Blogger_icon.svg.png" alt="" class="app-icon" />
               <p>Blogger</p>
             </div>
             <div class="google-textImg">
-              <img src="./keeps.png" alt="" class="app-icon" />
+              <img src="images/keeps.png" alt="" class="app-icon" />
               <p>Keep</p>
             </div>
             <div class="google-textImg">
-              <img src="./jamboard.png" alt="" class="app-icon" />
+              <img src="images/jamboard.png" alt="" class="app-icon" />
               <p>Jamboard</p>
             </div>
             <div class="google-textImg">
-              <img src="./classroom-removebg-preview.png" alt="" class="app-icon" />
+              <img src="images/classroom-removebg-preview.png" alt="" class="app-icon" />
               <p>Classroom</p>
             </div>
             <div class="google-textImg">
-              <img src="./Google_Earth_icon.svg.png" alt="" class="app-icon" />
+              <img src="images/Google_Earth_icon.svg.png" alt="" class="app-icon" />
               <p>Earth</p>
             </div>
             <div class="google-textImg">
-              <img src="./bookmark.png" alt="" class="app-icon" />
+              <img src="images/bookmark.png" alt="" class="app-icon" />
               <p>Saved</p>
             </div>
             <div class="google-textImg">
-              <img src="./Google_Arts_and_Culture.png" alt="" class="app-icon" />
+              <img src="images/Google_Arts_and_Culture.png" alt="" class="app-icon" />
               <p>Arts and Culture</p>
             </div>
             <div class="google-textImg">
-              <img src="./adwords.png" alt="" class="app-icon" />
+              <img src="images/adwords.png" alt="" class="app-icon" />
               <p>Google Ads</p>
             </div>
             <div class="google-textImg">
-              <img src="./new.png" alt="" class="app-icon" />
+              <img src="images/new.png" alt="" class="app-icon" />
               <p>Google One</p>
             </div>
             <div class="google-textImg">
-              <img src="./travel.png" alt="" class="app-icon" />
+              <img src="images/travel.png" alt="" class="app-icon" />
               <p>Travel</p>
             </div>
             <div class="google-textImg">
-              <img src="./google-forms.png" alt="" class="app-icon" />
+              <img src="images/google-forms.png" alt="" class="app-icon" />
               <p>Forms</p>
             </div>
             <div class="google-textImg">
-              <img src="./Google_Chrome_Web_Store_icon_.png" alt="" class="app-icon" />
+              <img src="images/Google_Chrome_Web_Store_icon_.png" alt="" class="app-icon" />
               <p>Chrome web store</p>
             </div>
             <div class="google-textImg">
-              <img src="./password.png" alt="" class="app-icon" />
+              <img src="images/password.png" alt="" class="app-icon" />
               <p>Passowrd Manager</p>
             </div>
             <div class="google-textImg">
-              <img src="./Google-Analytics-Logo.png" alt="" class="app-icon" />
+              <img src="images/Google-Analytics-Logo.png" alt="" class="app-icon" />
               <p>Google Analytics</p>
             </div>
           </div>
